# task_alex_marusich

./: .coverage  README.md  README.txt  del_test_task.py  pyproject.toml  task.json  task.py  test_task.py
src/enums/: task_enums.py
tests/: conftest.py  test_task.py
