[tool.poetry]
name = "test-alex-marusich"
version = "0.1.0"
description = "test-task"
authors = ["GeorgeBinder84 <bigbinder84@gmail.com>"]
readme = "README.md"
packages = [{include = "test_alex_marusich"}]

[tool.poetry.dependencies]
python = "^3.8"
certifi = "2022.9.24"
charset-normalizer = "2.1.0"
idna = "3.3"
requests = "2.28.1"
urllib3 = "1.26.11"
pytest = "^7.2.0"
coverage = "^6.5.0"
aiohttp = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
